# sonarqube-mcp

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
src/sonarqube_mcp/: generate_openapi.py  models.py  server.py  settings.py
tests/: conftest.py  test_generate_openapi.py  test_models.py
